2009-xx-xx - release x.x.x
        - Remove XC command

2009-09-27 - release 0.8.2
        - Bugfix: Prevent random storage corruption on FAT32 media
        - Bugfix: Image files not mountable if read-only file or media
        - Bugfix: Do not clear error channel if sec. 15 is closed
        - Add a dummy RTC read during init (to update year if required)
        - Enable I2C RTC support in LarsP configuration for Final Expansion 3
        - Acknowledge ATN during initialisation to stall C64 if required

2009-05-24 - release 0.8.1a
        - Fix bootloader version number generation

2009-05-20 - release 0.8.1
        - Fix uIEC/IDE SD card change detection
        - Dreamload support for uIEC
        - Mark the RTC time as valid after setting the clock
        - Delay SPI initialisation until absolutely required
        - Show disk change confirmation even when the error blink is active
        - Exit the FC3 fastloader if ATN is active
        - Fix indentation of 1000+ block files
        - Remove 0-byte from the long version message
        - Fix multiple save-with-replace bugs
        - Ignore directories when matching file name wildcards

2009-03-08 - release 0.8.0
        - direct sector access of the real storage device
        - ignore DEL files in file_open
        - drive mapper
        - EXOS V3 fastloader support
        - requires avr-libc 1.6.x

2008-10-02 - release 0.8.0pre1
        - Implement Dreamload emulation
        - RTC support
        - Dataflash support
        - Multi-file scratch
        - Copy command
        - Large buffer support
        - Final Cartridge 3 freezed file fastloader support
        - D71/D81 disk image support
        - parse FSINFO sector for faster FAT32 free space calculation
        - partial REL file support

2008-07-09 - release 0.7.3
        - Bugfix: Free buffers on error in M2I and D64
          (fixes "D64 size increases to 1.1M when its free space runs out")

2008-06-10 - release 0.7.2