@@ -41,6 +41,7 @@ CONFIG_TURBODISK=y
 CONFIG_JIFFY_ASM=y
 CONFIG_FC3=y
 CONFIG_DREAMLOAD=y
+CONFIG_ULOAD3=y
 CONFIG_HARDWARE_VARIANT=3
 CONFIG_HARDWARE_NAME=mmc2iec
 CONFIG_SD_AUTO_RETRIES=10
