@@ -40,6 +40,7 @@ CONFIG_COMMAND_CHANNEL_DUMP=y
 CONFIG_TURBODISK=y
 CONFIG_FC3=y
 CONFIG_DREAMLOAD=y
+CONFIG_ULOAD3=y
 CONFIG_JIFFY_ASM=y
 CONFIG_HARDWARE_VARIANT=5
 CONFIG_HARDWARE_NAME=sd2iec-sw2
