@@ -42,6 +42,7 @@ CONFIG_TURBODISK=y
 CONFIG_JIFFY_ASM=y
 CONFIG_FC3=y
 CONFIG_DREAMLOAD=y
+CONFIG_ULOAD3=y
 CONFIG_HARDWARE_VARIANT=4
 CONFIG_HARDWARE_NAME=uIEC
 CONFIG_SD_AUTO_RETRIES=10
