@@ -34,6 +34,7 @@
 #define FL_DREAMLOAD     4
 #define FL_DREAMLOAD_OLD 5
 #define FL_FC3_FREEZED   6
+#define FL_ULOAD3        7
 
 #ifndef __ASSEMBLER__
 
@@ -45,6 +46,7 @@ void load_turbodisk(void);
 void load_fc3(uint8_t freezed);
 void save_fc3(void);
 void load_dreamload(void);
+void load_uload3(void);
 
 #endif
 #endif
